crates/rome_formatter/tests/specs/prettier/typescript/compiler/castParentheses.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: castParentheses.ts

---
# Input
```js
﻿class a {
    static b: any;
}

var b = (<any>a);
var b = (<any>a).b;
var b = (<any>a.b).c;
var b = (<any>a.b()).c;
var b = (<any>new a);
var b = (<any>new a.b);
var b = (<any>new a).b

```

# Output
```js
class a {
  static b: any;
}

var b = (<any>
a;
)
var b = (<any>
a;
).b
var b = (<any>
a.b;
).c
var b = (<any>
a.b();
).c
var b = (<any>
new a();
)
var b = (<any>
new a.b();
)
var b = (<any>
new a();
).b

```

# Errors
```
error[SyntaxError]: expected `')'` but instead found `a`
  ┌─ castParentheses.ts:5:15
  │
5 │ var b = (<any>a);
  │               ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ castParentheses.ts:5:16
  │
5 │ var b = (<any>a);
  │               -^
  │               ││
  │               │An explicit or implicit semicolon is expected here...
  │               ...Which is required to end this statement

error[SyntaxError]: expected `')'` but instead found `a`
  ┌─ castParentheses.ts:6:15
  │
6 │ var b = (<any>a).b;
  │               ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ castParentheses.ts:6:16
  │
6 │ var b = (<any>a).b;
  │               -^
  │               ││
  │               │An explicit or implicit semicolon is expected here...
  │               ...Which is required to end this statement

error[SyntaxError]: expected `')'` but instead found `a`
  ┌─ castParentheses.ts:7:15
  │
7 │ var b = (<any>a.b).c;
  │               ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ castParentheses.ts:7:18
  │
7 │ var b = (<any>a.b).c;
  │               ---^
  │               │  │
  │               │  An explicit or implicit semicolon is expected here...
  │               ...Which is required to end this statement

error[SyntaxError]: expected `')'` but instead found `a`
  ┌─ castParentheses.ts:8:15
  │
8 │ var b = (<any>a.b()).c;
  │               ^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ castParentheses.ts:8:20
  │
8 │ var b = (<any>a.b()).c;
  │               -----^
  │               │    │
  │               │    An explicit or implicit semicolon is expected here...
  │               ...Which is required to end this statement

error[SyntaxError]: expected `')'` but instead found `new`
  ┌─ castParentheses.ts:9:15
  │
9 │ var b = (<any>new a);
  │               ^^^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ castParentheses.ts:9:20
  │
9 │ var b = (<any>new a);
  │               -----^
  │               │    │
  │               │    An explicit or implicit semicolon is expected here...
  │               ...Which is required to end this statement

error[SyntaxError]: expected `')'` but instead found `new`
   ┌─ castParentheses.ts:10:15
   │
10 │ var b = (<any>new a.b);
   │               ^^^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ castParentheses.ts:10:22
   │
10 │ var b = (<any>new a.b);
   │               -------^
   │               │      │
   │               │      An explicit or implicit semicolon is expected here...
   │               ...Which is required to end this statement

error[SyntaxError]: expected `')'` but instead found `new`
   ┌─ castParentheses.ts:11:15
   │
11 │ var b = (<any>new a).b
   │               ^^^ unexpected

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ castParentheses.ts:11:20
   │
11 │ var b = (<any>new a).b
   │               -----^
   │               │    │
   │               │    An explicit or implicit semicolon is expected here...
   │               ...Which is required to end this statement


```


